# Scooter-kg

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-celery.sh  run-celery_beat.sh  wsgi-entrypoint.sh
config/: celery.py  settings.py  urls.py  yasg.py
scooter_rent/config/: settings.py  urls.py
src/bicycle/: admin.py  apps.py  models.py  serializers.py  signals.py  translation.py  urls.py  views.py
src/bicycle/migrations/: 0001_initial.py  0002_bicycle_address_en_bicycle_address_kg_and_more.py  0003_remove_bicycle_address_kg_remove_bicycle_title_kg.py  0004_ratingbicyclerelation.py  0005_alter_bicycle_code_alter_bicycle_image_and_more.py  0006_alter_bicycle_code_and_more.py  0007_rename_first_login_bicycle_created_at_and_more.py
src/cart/: models.py  serializers.py  urls.py  views.py
src/cart/migrations/: 0001_initial.py  0002_alter_cart_owner.py  0003_alter_cart_owner.py
src/notification/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/notification/migrations/: 0001_initial.py  0002_delete_mobiledevice.py
src/order/: admin.py  models.py  serializers.py  urls.py  views.py
src/order/migrations/: 0001_initial.py
src/payment/: backends.py  models.py  serializers.py  urls.py  views.py
src/payment/migrations/: 0001_initial.py
src/payments/paybox_payments/: apps.py  models.py
src/payments/stripe_payment/: apps.py  models.py  tasks.py  views.py
src/scooter/: admin.py  apps.py  models.py  serializers.py  signals.py  translation.py  urls.py  views.py
src/scooter/migrations/: 0001_initial.py  0002_alter_scooter_address.py  0003_scooter_address_en_scooter_address_kg_and_more.py  0004_remove_scooter_address_kg_remove_scooter_title_kg.py  0005_ratingscooterrelation.py  0006_alter_ratingscooterrelation_scooter_and_more.py  0007_rename_first_login_ratingscooterrelation_created_at_and_more.py  0008_scooter_quantity.py
src/user/: admin.py  managers.py  models.py  serializers.py  services.py  tasks.py  translation.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_remove_user_phone_number.py  0003_alter_user_social_network.py  0003_user_phone_number.py  0004_user_is_verifed.py  0004_user_otp.py  0005_alter_user_phone_number.py  0005_remove_user_is_verifed_remove_user_otp_and_more.py  0006_alter_user_phone_number.py  0006_user_email_en_user_email_kg_user_email_ru_and_more.py  (+8 more)
(+22 files in other folders)
