[tool.poetry]
name = "scooter-kg"
version = "0.1.0"
description = ""
authors = ["muratbek2255 <muratbek2255@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
Pillow = "^9.2.0"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
django-filter = "^22.1"
drf-yasg = "^1.21.3"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
